--- a/lscom/public/index.html
+++ b/lscom/public/index.html
@@ -11,8 +11,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>LASERSHAFT</title>
   </head>
+  <style>
+    body {
+      background-color: lightgray;
+      color: #333344; 
+    }
+  </style>
   <body>
-    <noscript><a href="https://www.github.com/Alphaxius" /></noscript>
+    <noscript><a href="https://www.github.com/Alphaxius">No Javascript?</a></noscript>
     <div id="root"></div>
   </body>
 </html>
