small tweaks, blog now shows post date

--- a/lscom/public/index.html
+++ b/lscom/public/index.html
@@ -6,10 +6,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="LASERSHAFT.COM"
+      content="A home for things that Jesella 'Jess' Laser Beam Barrett puts things on the internet."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>LASERSHAFT</title>
+    <title>Jess Barrett</title>
   </head>
   <style>
     body {
