--- a/lscom/public/index.html
+++ b/lscom/public/index.html
@@ -9,6 +9,7 @@
       content="A home for things that Jesella 'Jess' Laser Beam Barrett puts things on the internet."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+	 <link rel="icon" type="image/png" href="./favicon.png">
     <title>Jess Barrett</title>
   </head>
   <style>
