--- a/lscom/public/index.html
+++ b/lscom/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
+	<head>
+ 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,6 +10,9 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	 <link rel="icon" type="image/png" href="./favicon.png">
+	 <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&family=Source+Sans+Pro&family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
     <title>Jess Barrett</title>
   </head>
   <style>
