--- a/lscom/public/numbergame.html
+++ b/lscom/public/numbergame.html
@@ -46,8 +46,7 @@
 			const activeNumbersLength = activeNumbers.length;
 
 			// remove active if already pressed
-			if (activeNumbers.includes(numCell)) {
-				console.log("Removing cell");
+			if (activeNumbers.namedItem(numCell.id)) {
 				numCell.classList.remove("number-cell-active");
 				numCell.value = 0;
 				return;
