--- a/lscom/public/numbergame.html
+++ b/lscom/public/numbergame.html
@@ -46,7 +46,7 @@
 			const activeNumbersLength = activeNumbers.length;
 
 			// remove active if already pressed
-			if (activeNumbers in activeNumbers) {
+			if (numCell in activeNumbers) {
 				numCell.classList.remove("number-cell-active");
 				numCell.value = 0;
 				return;
