--- a/lscom/public/numbergame.html
+++ b/lscom/public/numbergame.html
@@ -46,9 +46,7 @@
 			const activeNumbersLength = activeNumbers.length;
 
 			// remove active if already pressed
-			console.log(numCell in activeNumbers); // this always returns false
-			console.log(activeNumbers[numCell.id]); // this always returns undefined
-			console.log("number-cell-active" in numCell.classList);
+			console.log(numCell.classList);
 			if (numCell in activeNumbers) {
 				numCell.classList.remove("number-cell-active");
 				numCell.value = 0;
