--- a/lscom/public/numbergame.html
+++ b/lscom/public/numbergame.html
@@ -45,9 +45,8 @@
 			const activeNumbers = document.getElementsByClassName("number-cell-active");
 			const activeNumbersLength = activeNumbers.length;
 
-			// remove active if already pressed
-			console.log(numCell.classList.value.includes("number-cell-active"));
-			if (numCell in activeNumbers) {
+			// remove active if already pressed (toggle off)
+			if (numCell.classList.value.includes("number-cell-active")) {
 				numCell.classList.remove("number-cell-active");
 				numCell.value = 0;
 				return;
